# paint

./: CMakeLists.txt  README.md
include/: graphics.h  paint.h  settings.h  utils.h
src/: graphics.cpp  main.cpp  paint.cpp  settings.cpp
